## Process this file with automake to create Makefile.in

## Makefile for Automake.

## Copyright (C) 2003, 2006  Free Software Foundation, Inc.

## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.

## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.

## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
## 02110-1301, USA.

info_TEXINFOS = automake.texi
automake_TEXINFOS = fdl.texi

# The following requires a fixed version of the Emacs 19.30 etags.
ETAGS_ARGS = --lang=none \
 --regex='/^@node[ \t]+\([^,]+\)/\1/' $(srcdir)/automake.texi
TAGS_DEPENDENCIES = automake.texi

amhello_sources = \
  amhello/configure.ac \
  amhello/Makefile.am \
  amhello/README \
  amhello/src/main.c \
  amhello/src/Makefile.am

amhello_configury = \
  aclocal.m4 \
  autom4te.cache \
  Makefile.in \
  config.h.in \
  configure \
  depcomp \
  install-sh \
  missing \
  src/Makefile.in

dist_noinst_DATA = $(amhello_sources)
dist_doc_DATA = $(srcdir)/amhello-1.0.tar.gz

# We depend on configure.ac so that we regenerate the tarball
# whenever the Automake version changes.
# aclocal-$(APIVERSION) and automake-$(APIVERSION) are generated by
# configure in tests/.
$(srcdir)/amhello-1.0.tar.gz: $(amhello_sources) $(top_srcdir)/configure.ac
	PATH="`pwd`/../tests$(PATH_SEPARATOR)$$PATH" && \
	export PATH && \
	cd $(srcdir)/amhello && \
	ACLOCAL=aclocal-$(APIVERSION) AUTOMAKE=automake-$(APIVERSION) \
	autoreconf -vfi && \
	./configure && \
	$(MAKE) $(AM_MAKEFLAGS) distcheck && \
	$(MAKE) $(AM_MAKEFLAGS) distclean && \
	rm -rf $(amhello_configury) && \
	mv amhello-1.0.tar.gz ..
